# drissionpage-devtools-mcp

./: .gitignore  README.md  install.sh  mcp-config.example.json  pyproject.toml
src/drissionpage_devtools_mcp/: __init__.py  server.py  tool_snapshot.json
