[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drissionpage-devtools-mcp"
version = "0.2.0"
description = "A single MCP server that proxies js-reverse-mcp after launching Chrome through DrissionPage."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
  "anyio>=4.0.0",
  "DrissionPage>=4.0.0",
  "mcp>=1.0.0",
]

[project.scripts]
drissionpage-devtools-mcp = "drissionpage_devtools_mcp.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["drissionpage_devtools_mcp*"]
